# mssql-to-springel

./: .gitignore  LICENSE  README.md  complex_test_cases.py  pyproject.toml
.github/: copilot-instructions.md
mssql_to_spring_el/: __main__.py  converter.py  main.py  parser.py
mylibrary/: __main__.py  converter.py  logic_models.py  main.py  parser.py
tests/: __init__.py  test_camelcase_conversion.py  test_cli_contract.py  test_complex_parsing_fixes.py  test_complex_scenarios.py  test_converter_contract.py  test_edge_cases.py  test_immediate_fixes.py  test_integration_basic.py  test_integration_complex.py  test_main.py  test_models.py  test_parser_contract.py  test_spring_el_validation.py  test_ultimate_complexity_validation.py
