[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mylibrary"
version = "0.1.0"
description = "A simple Python library"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "sqlparse",
    "pyparsing"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mylibrary*"]
