[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mssql-to-spring-el"
version = "0.1.0"
description = "MSSQL Logic Parser to Spring Expression Language Converter"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "sqlparse",
    "pyparsing"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mssql_to_spring_el*"]
